--- a/index.html
+++ b/index.html
@@ -1,40 +1,108 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<title> Fish Creek Animal Hospital </title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="fishcreek.css">
+<title>HELP GAMING</title>
+<link rel="stylesheet" href="assets/style.css" />
+<script src="assets/jquery3.js"></script>
+<script src="assets/scripts.js"></script>
+<meta charset="utf-8">
 </head>
 <body>
-	<h1> Fish Creek Animal Hospital </h1>
-	<nav>
-	<a href="Home.html">Home</a>&nbsp;
-	<a href="Services.html">Services</a>&nbsp;
-	<a href="AsktheVet.html"> Ask the Vet</a>&nbsp;
-	<a href="Contact.html">Contact</a>&nbsp;
-	</nav>
-	<div class="wrapper">
-	<dl>
-		<dt class="category"><strong>Full Service Facillity</strong></dt>
-			<dd>Veterinatians and staff are on duty 24 hours a day, 7 days a week. </dd>
-		<dt class="category"><strong> Years of Experience</strong></dt>
-			<dd>Fish Creek Veterinarians have provided quality, dependable care for your beloved animals since 1984.</dd>
-		<dt class="category"><strong> Open Door Policy</strong></dt>
-			<dd>Our professionals welcome owners to stay with thier pets during any medical procedure.</dd>
-	</dl>
-	</div>
-	<div>
-	<a href="phone.html">800-555-5555 </a><br>
-	1242 Grassy Lane<br>
-	Fish Creek, WI 55535
-	</div>
-	<br>
-	<footer>
-	Copyright &copy; 2016 Fish Creek Animal Hospital
-	<br>
-	<a href="email.html">youtfirstname@yourlastname.com</a>
-	</footer>
-	
-</body>
 
+<header>
+
+<div class="page-width">
+
+<a class="logo" href="index.html"></a>
+
+<nav>
+	
+<div class="menubutton"></div>
+
+<ul class="menubtns">
+<li><a href="index.html">Home</a></li>
+<li><a href="register.html">Register</a></li>
+<li><a href="login.html">Login</a></li>
+<li><a href="gamelist.html">Game List</a></li>
+<li><a href="contactus.html">Contact us</a></li>
+</ul>
+
+</nav>
+
+
+</div>
+
+</header>
+
+<div class="container">	
+<div class="feature_game_image">
+<div class="page-width">
+<div class="homepage_featured_game">
+
+<h1>Featured Game of the Day</h1>
+
+<a class="button auto-size" href="persona_5.html">Game Information</a>
+
+</div>
+</div>
+</div>
+</div>
+
+
+
+<div class="page-width">
+
+<h2 class="h2title">Weekly Game Sales</h2>
+
+<div class="cover">
+<div class="pad25">
+<div class="game-container">
+	<a href="me_andro.html" class="game-photo" style="background-image: url('assets/images/me_andromeda.jpg');">
+					
+		<div class="game-discount">
+			<div class="square"><span>20% Discount</span></div>
+		</div>
+	</a>
+	<h5><a href="me_andro.html">Click for more Information</a></h5>
+</div>
+</div>
+</div>
+	
+<div class="cover">
+<div class="pad25">
+<div class="game-container">
+	<a href="dark_soul.html" class="game-photo" style="background-image: url('assets/images/dark_soul_3.jpg');">
+
+		<div class="game-discount">
+			<div class="square"><span>20% Discount</span></div>
+		</div>
+	</a>
+	<h5><a href="dark_soul.html">Click for more Information</a></h5>
+</div>
+</div>
+</div>
+	
+<div class="cover">
+<div class="pad25">
+<div class="game-container">
+	<a href="nier.html" class="game-photo" style="background-image: url('assets/images/nier_automata.jpg');">							
+
+		<div class="game-discount">
+			<div class="square"><span>20% Discount</span></div>
+		</div>
+	</a>
+	<h5><a href="nier.html">Click for more Information</a></h5>
+</div>
+</div>
+</div>
+
+<div class="clear"></div>
+
+</div>
+	
+<footer>
+<p>Copyright &#169; HELP GAMING</p>
+</footer>
+
+</body>
 </html>
